src/objects/Purchase_Order__c.object
<CustomObject>
    <fields>
        <fullName>Account_Billing_Address_Formula__c</fullName>
        <description>Pulls Billing address from Account</description>
        <formula>Account__r.BillingStreet&amp;BR()&amp;
Account__r.BillingCity&amp;&apos;, &apos;&amp; Account__r.BillingState&amp;&apos; &apos;&amp; Account__r.BillingPostalCode&amp;BR()&amp;  Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account billing address</inlineHelpText>
        <label>Account Billing Address Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_Address__c</fullName>
        <label>Account Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organisation</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Supplier__c</field>
                <operation>equals</operation>
                <value>TRUE</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BSC_Event_Start_Date__c</fullName>
        <description>Start date of related BSC event</description>
        <formula>BSC_Event__r.StartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Start date of related BSC event</inlineHelpText>
        <label>BSC Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BSC_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BSC Event</label>
        <referenceTo>Special_Event__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Liability__c</fullName>
        <formula>Total_Cost__c  *
(
   IF
   ( 
      NOW() &lt; Liability_1_Date__c, Liability_1_Percentage__c, 
      IF
      (
         AND(  NOW() &gt; Liability_1_Date__c, NOW() &lt;= Liability_2_Date__c
            ), Liability_2_Percentage__c,
         IF
         (
            AND( OR(NOW() &gt; Liability_1_Date__c, NOW() &gt; Liability_2_Date__c) , NOW() &lt;= Liability_3_Date__c
               ),Liability_3_Percentage__c, 0
         )
      )
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Liability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Liability_1_Date__c</fullName>
        <description>The date on which Liability 1 Percentage of the Event Cost is liable</description>
        <inlineHelpText>The date on which Liability 1 Percentage of the Event Cost is liable</inlineHelpText>
        <label>Liability 1 Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Liability_1_Percentage__c</fullName>
        <description>The percentage for liability 1</description>
        <inlineHelpText>The percentage for liability 1</inlineHelpText>
        <label>Liability 1 Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Liability_2_Date__c</fullName>
        <description>The date on which Liability 2 Percentage of the Event Cost is liable</description>
        <inlineHelpText>The date on which Liability 2 Percentage of the Event Cost is liable</inlineHelpText>
        <label>Liability 2 Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Liability_2_Percentage__c</fullName>
        <description>The percentage for liability 2.</description>
        <inlineHelpText>The percentage for liability 2.</inlineHelpText>
        <label>Liability 2 Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Liability_3_Date__c</fullName>
        <description>The date on which Liability 3 Percentage of the Event Cost is liable</description>
        <inlineHelpText>The date on which Liability 3 Percentage of the Event Cost is liable</inlineHelpText>
        <label>Liability 3 Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Liability_3_Percentage__c</fullName>
        <description>The percentage for liability 3.</description>
        <inlineHelpText>The percentage for liability 3.</inlineHelpText>
        <label>Liability 3 Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <description>Link to view PO from approval page</description>
        <formula>HYPERLINK(&quot;/&quot;+Id,&quot;Click Here to View&quot;,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Price__c</fullName>
        <label>Net Price</label>
        <summarizedField>Purchase_Order_Line_Item__c.Net_Price__c</summarizedField>
        <summaryForeignKey>Purchase_Order_Line_Item__c.Purchase_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notify_PO_Owners_of_T_C__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to trigger workflows to e-mail+task PO Owner and Will that PO Event has been cancelled or &quot;To be transferred&quot;</description>
        <label>Notify PO Owners of T&amp;C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Date_2__c</fullName>
        <description>Shows the BSC Event Start Date if an Event is related otherwise the Created Date of the PO.</description>
        <formula>IF(
(ISBLANK(BSC_Event__c)),
(DATEVALUE( CreatedDate)) ,
BSC_Event__r.StartDate__c)</formula>
        <inlineHelpText>Shows the BSC Event Start Date if an Event is related otherwise the Created Date of the PO.</inlineHelpText>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>OLD FIELD - NO LONGER USED.  KEPT FOR OLD DATA ONLY!</description>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner_Department__c</fullName>
        <description>Used for Drawloop documents (Not on Page Layouts)</description>
        <formula>Owner:User.Department</formula>
        <label>Owner Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Ref_Display__c</fullName>
        <description>Does not display PO ref if status is in &quot;a progress&quot; state</description>
        <formula>CASE(text( Status__c ), &apos;New&apos;, &apos;Not yet to be displayed&apos;, &apos;Draft&apos;, &apos;Not yet to be displayed&apos;,&apos;Awaiting Approval&apos;, &apos;Not yet to be displayed&apos;,Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>PO ref will be shown when PO has been approved</inlineHelpText>
        <label>PO Ref Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplier_Address__c</fullName>
        <description>Supplier Address. If empty, it wil be populated  same as Supplier billing address</description>
        <inlineHelpText>Supplier Address. If empty, it wil be populated  same as Supplier billing address</inlineHelpText>
        <label>Supplier Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supplier_Approved__c</fullName>
        <description>If supplier is not approved NOT Approved - You cannot raise this PO is displayed</description>
        <formula>IF( Account__r.Approved_Supplier__c =TRUE,&quot;Approved&quot;,&quot;Supplier NOT Approved - You cannot raise this PO&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculates if supplier is approved</inlineHelpText>
        <label>Supplier Approved?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Invoice_Date__c</fullName>
        <label>Supplier Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Supplier_Invoice__c</fullName>
        <label>Supplier Invoice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Name__c</fullName>
        <description>Name of account linked to PO</description>
        <formula>Account__r.Name</formula>
        <inlineHelpText>Name of account associated to this PO</inlineHelpText>
        <label>Supplier Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost</label>
        <summarizedField>Purchase_Order_Line_Item__c.Cost__c</summarizedField>
        <summaryForeignKey>Purchase_Order_Line_Item__c.Purchase_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ultimate_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ultimate Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Purchase_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Purchase Order</label>
    <listViews>
        <fullName>Add_Hoc</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>BSC_Event_Start_Date__c</columns>
        <columns>Total_Cost__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Purchase_Order__c.Purchase_Order_for_Trainers_Auditors</value>
        </filters>
        <label>Ad Hoc</label>
    </listViews>
    <listViews>
        <fullName>All_Purchase_Orders</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>BSC_Event__c</columns>
        <columns>Net_Price__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Total_Cost__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Purchase Orders</label>
    </listViews>
    <listViews>
        <fullName>Awaiting_Approval</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Supplier_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Awaiting Approval</value>
        </filters>
        <label>Awaiting Approval</label>
    </listViews>
    <listViews>
        <fullName>Awaiting_Approval1</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Supplier_Approved__c</columns>
        <columns>Status__c</columns>
        <columns>BSC_Event__c</columns>
        <columns>BSC_Event_Start_Date__c</columns>
        <columns>Order_Date_2__c</columns>
        <columns>Net_Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>Status of New</label>
        <sharedTo>
            <group>EventLogistics</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Supplier_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
    </listViews>
    <listViews>
        <fullName>PO_Listing1</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Total_Cost__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>BSC_Event__c</columns>
        <columns>Net_Price__c</columns>
        <columns>Notes__c</columns>
        <columns>Order_Date__c</columns>
        <columns>PO_Ref_Display__c</columns>
        <columns>Status__c</columns>
        <columns>Supplier_Invoice__c</columns>
        <columns>Supplier_Invoice_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>PO Listing</label>
    </listViews>
    <listViews>
        <fullName>PO_listing</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Total_Cost__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>BSC_Event__c</columns>
        <columns>Link__c</columns>
        <columns>Net_Price__c</columns>
        <columns>Notes__c</columns>
        <columns>Order_Date__c</columns>
        <columns>PO_Ref_Display__c</columns>
        <columns>Status__c</columns>
        <columns>Supplier_Invoice__c</columns>
        <columns>Supplier_Invoice_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>PO listing</label>
    </listViews>
    <nameField>
        <displayFormat>PO-{0000}</displayFormat>
        <label>PO Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <recordTypes>
        <fullName>General_Purchase_Order</fullName>
        <active>true</active>
        <description>General Purchase Orders</description>
        <label>General Purchase Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Purchase_Order_for_Trainers_Auditors</fullName>
        <active>true</active>
        <description>For Trainers / Auditors</description>
        <label>Purchase Order for Trainers/Auditors</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Approved_Supplier_or_Not</fullName>
        <active>true</active>
        <description>To check whether the supplier is approved supplier or not  to raise the PO.</description>
        <errorConditionFormula>OR( 
AND
( 
 ISCHANGED(Account__c), 
  OR
  (  
   Account__r.Supplier__c = False,
   Account__r.Approved_Supplier__c = False
  )
), 
AND( 
ISNEW(),
  OR
  ( 
  Account__r.Supplier__c = False,
  Account__r.Approved_Supplier__c = False 
  )
) 
)</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>The account is not an Approved Supplier. The PO can only be raised when an account is approved supplier!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_for_Confirmed_Events</fullName>
        <active>true</active>
        <description>This will let the users to raise the PO only if the Event status is confirmed.This will be applicable only for  Trainer Record Type POs</description>
        <errorConditionFormula>AND(
 BEGINS($RecordType.Name, &apos;Purchase Order for Trainers&apos;),
text(BSC_Event__r.Status__c) &lt;&gt;&apos;Confirmed&apos;,
text(BSC_Event__r.Status__c) &lt;&gt;&apos;Completed&apos;,
text (Status__c) &lt;&gt; &apos;Rejected&apos;
)</errorConditionFormula>
        <errorDisplayField>BSC_Event__c</errorDisplayField>
        <errorMessage>Event Status is not Confirmed. Please confirm the Event first  to raise the PO.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Liability_1_Date_Correct</fullName>
        <active>true</active>
        <errorConditionFormula>OR
(
    Liability_1_Date__c &gt; Liability_2_Date__c,
    Liability_1_Date__c &gt; Liability_3_Date__c 
)</errorConditionFormula>
        <errorDisplayField>Liability_1_Date__c</errorDisplayField>
        <errorMessage>Liability 1 date must be less than Liability 2 Date and Liability 3 Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Liability_2_Date_Correct</fullName>
        <active>true</active>
        <errorConditionFormula>OR
(
    Liability_1_Date__c &gt; Liability_2_Date__c,
    Liability_2_Date__c &gt; Liability_3_Date__c 
)</errorConditionFormula>
        <errorDisplayField>Liability_2_Date__c</errorDisplayField>
        <errorMessage>Liability 2 Date should be greater than Liability 1 Date and less than Liability 3 Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Liability_3_Date_Correct</fullName>
        <active>true</active>
        <errorConditionFormula>OR
(
    Liability_1_Date__c &gt; Liability_3_Date__c,
    Liability_2_Date__c &gt; Liability_3_Date__c 
)</errorConditionFormula>
        <errorDisplayField>Liability_3_Date__c</errorDisplayField>
        <errorMessage>Liability 3 date must be greater than Liability 2 Date and Liability 3 Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NoEditByNonAdmins</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISNEW())
,
OR(
ISPICKVAL(Status__c, &quot;Awaiting Approval&quot;),
ISPICKVAL(Status__c, &quot;Paid&quot;),
ISPICKVAL(Status__c, &quot;Cancelled&quot;),
ISPICKVAL(Status__c, &quot;Do Not Pay&quot;)
)
,
AND(
$Profile.Id &lt;&gt;&quot;00eD0000001Pgwv&quot;,
$Profile.Id &lt;&gt;&quot;00eD0000001Pgdj&quot;,
$Profile.Id&lt;&gt;&quot;00e20000001Mkam&quot;
)
)</errorConditionFormula>
        <errorMessage>You can not update PO if the status is Awaiting Approval OR  Paid OR Cancelled OR Do Not Pay</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PO_Cannot_be_raised_against_this_Account</fullName>
        <active>false</active>
        <description>Either the Account is not active or isn&apos;t an approved supplier.</description>
        <errorConditionFormula>OR(
Account__r.Active__c = False,
 Account__r.Approved_Supplier__c  = False
)</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>You cannot raise a PO against this account, either the Account is not active or it is not an approved supplier.</errorMessage>
    </validationRules>
</CustomObject>